deployments/sample-deployment-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileuploader
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fileuploader
  template:
    metadata:
      labels:
        app: fileuploader
    spec:
      containers:
      - name: fileuploader
        image: jpalaparthi/fileuploader
        ports:
        - containerPort: 50080
        volumeMounts:
        - mountPath: /app/uploads
          name: fileuploader-ps
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference: 
              matchExpressions:
              - key: size
                operator: In
                values:
                - large
      volumes:
      - name:  fileuploader-ps
        persistentVolumeClaim:
          claimName: fileuploader-pv-claim
