deployments/sample-readiness-probe-exec.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: readyness
  name: readyness-exec
spec:
  containers:
  - name: readyness
    image: k8s.gcr.io/busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    readinessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 2
      periodSeconds: 2
