deployments/sample-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileuploader
  labels:
    app: fileuploader
  namespace: test
spec:
  ports:
    - port: 50080
      name: web
  clusterIP: None
  selector:
    app: fileuploader
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fileuploader
  namespace: test
spec:
  selector:
    matchLabels:
      app: fileuploader
  serviceName: fileuploader
  replicas: 3
  template:
    metadata:
      labels:
        app: fileuploader
    spec:
      containers:
      - name: fileuploader
        image: jpalaparthi/fileuploader
        ports:
        - containerPort: 50080
          name: web
        volumeMounts:
        - name: www
          mountPath: /app/uploads
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
